Remove artifacts and fix bugs in Dockerfile