@@ -1,10 +1,28 @@
 # syntax=docker/dockerfile:1
 
-# must use bookworm for directly compatible R version >=4.4.0
+#######################################
+#              BASE IMAGE             #
+#######################################
+#
+# This image contains basic packages which are needed in both
+# the build image and the runtime image. In this case,
+# it sets the locale information to en_US.UTF8 for R,
+# installs a modern version of R, and also the Java runtime.
+
+
+# bullseye is stable and contains openjdk-11-jre in stable by default
 FROM debian:bullseye-slim AS base
 
 # get latest version of R: https://cran.r-project.org/bin/linux/debian/
-RUN apt-get update && apt-get install -y gnupg2
+RUN apt-get update
+RUN apt-get install -y gnupg2
+RUN apt-get install -y perl
+
+# set locale
+RUN apt-get install -y locales
+RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && locale-gen
+ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
 
 RUN gpg --keyserver keyserver.ubuntu.com \
     --recv-key '95C0FAF38DB3CCAD0C080A7BDC78B2DDEABC47B7'
@@ -24,6 +42,13 @@ RUN apt-get install -y r-base-core r-bioc-iranges openjdk-11-jre --no-install-re
 # # install needed packages
 # RUN R -e 'BiocManager::install("IRanges")'
 
+#######################################
+#            BUILD PACKAGE            #
+#######################################
+#
+# This is the build image, which will download and install
+# all the dependencies using the bundled ./install_linux64.sh
+# script.
 
 
 FROM base AS build
@@ -46,27 +71,36 @@ COPY . .
 RUN sed -i 's/refBase = codeBase/refBase = "\/ref"/' JAFFA_stages.groovy
 
 
+#######################################
+#              RUN IMAGE              #
+#######################################
+#
+# This is the runtime image, which is what will be executed.
+# Ensure that all necessary files are copied into this image!
 
-# we only need this to run the image
+
 FROM base
 
+# add authorship information
 LABEL org.opencontainers.image.title "JAFFA" \
       org.opencontainers.image.description "High sensitivity transcriptome-focused fusion gene detection." \
       org.opencontainers.image.authors "Davidson, N.M., Majewski, I.J. & Oshlack, A." \
       org.opencontainers.image.source "https://github.com/Oshlack/JAFFA" \
       org.opencontainers.image.documentation "https://github.com/Oshlack/JAFFA/wiki/HowToSetUpJAFFA#docker"
 
-
+# copy packages from the build repository
 COPY --from=build /JAFFA /JAFFA
-# RUN strip --strip-debug /usr/local/lib/R/site-library/*/libs/*.so
 
+# clean up any packages lying around, if they are installed accidentially for some reason
 RUN apt remove -y gcc
 RUN apt autoremove
 
 ENV PATH=${PATH}:/JAFFA/tools/bin:/JAFFA
 
-# set locale
-ENV LANG=en_US.UTF-8
-ENV LC_ALL=en_US.UTF-8
+# this flag disables the "WARNING: An illegal reflective access operation has occurred" message.
+# this can currently be safely disabled, as the Java runtime version is fixed at openjdk-11-jre,
+# where this is safely permitted. in the future, if Java or Groovy is updated, this variable
+# should be removed.
+ENV JDK_JAVA_OPTIONS="$JDK_JAVA_OPTIONS --illegal-access=permit"
 
 ENTRYPOINT ["/JAFFA/tools/bin/bpipe", "run"]
